--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="mapbox_access_token">pk.eyJ1IjoiaWFtYWxpcm9zdGFtaSIsImEiOiJjanhjbmptcmowMjZnM3BvdnY0YWx4ampxIn0.iv9I6s34q_-k9GqCiz2seg</string>
     <string name="user_location_permission_explanation">pk.user_location_permission_explanation</string>
     <string name="user_location_permission_not_granted">user_location_permission_not_granted</string>
+    <string name="zoom_map_in_and_out_instruction">zoom_map_in_and_out_instruction</string>
+    <string name="zoom_map_in_and_out_variable_label_instruction">zoom_map_in_and_out_variable_label_instruction</string>
 </resources>
