--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,14 @@
     <string name="upload">بارگزاری</string>
     <string name="paper">مدارک</string>
     <string name="exit">خروج</string>
+    <string name="form">فرم</string>
+    <string name="owner">مالک</string>
+    <string name="phone_number">تلفن</string>
+    <string name="request_type">نوع تقاضا</string>
+    <string name="id_number">ردیف</string>
+    <string name="nation_number">کد ملی</string>
+    <string name="mobile_number">همراه</string>
+    <string name="request_date">تاریخ درخواست</string>
+    <string name="account_number">اشتراک</string>
+    <string name="license">پروانه</string>
 </resources>
