--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="login">ورود</string>
     <string name="company_site">WWW.ABFAISFAHAN.IR</string>
     <string name="copy_right">copyright 2017 by H.G.K co</string>
+    <string name="version">نسخه 1.1.0.1</string>
 </resources>
