--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,7 +34,7 @@
     <string name="copy_right">copyright 2017 by H.G.K co</string>
     <string name="version">نسخه 1.1.0.1</string>
 
-    <string name="accepted">OK</string>
+    <string name="accepted">تایید</string>
     <string name="message">message</string>
     <string name="dear_user">همکار گرامی!</string>
 
