--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,4 +107,5 @@
     <string name="bill_id">شناسه قبض</string>
     <string name="other_number">تعداد سایر</string>
     <string name="postal_code">کد پستی</string>
+    <string name="taxfif_number">تعداد تخفیف</string>
 </resources>
