--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,9 +32,9 @@
     <string name="login">ورود</string>
     <string name="loading_getting_info">ارتباط با سرویس دهنده</string>
     <string name="loading_connecting">ارتباط با سرور</string>
-    <string name="company_site">WWW.ABFAISFAHAN.IR</string>
-    <string name="copy_right">copyright 2017 by H.G.K co</string>
-    <string name="version">نسخه 1.1.0.2</string>
+    <string name="company_site">AbfaIsfahan.ir</string>
+    <string name="copy_right">copyright 2020 by H.G.K co</string>
+    <string name="version">نسخه</string>
 
     <string name="accepted">تایید</string>
     <string name="message">message</string>
