--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="username">نام کاربری</string>
     <string name="password">گذرواژه</string>
     <string name="login">ورود</string>
+    <string name="download_document">بارگیری مدارک</string>
     <string name="loading_getting_info">ارتباط با سرویس دهنده</string>
     <string name="loading_connecting">ارتباط با سرور</string>
     <string name="company_site">AbfaIsfahan.ir</string>
@@ -46,6 +47,7 @@
     <string name="error_short_length">.این فیلد کوتاه است</string>
     <string name="error_similar">شماره پرونده و شماره اشتراک مطابق نیستند.</string>
     <string name="error_IO">خطا در جابجای اطلاعات، لطفا مجدد تلاش کنید</string>
+    <string name="error_upload">در بارگذاری اطلاعات خطایی پدید آمد.</string>
     <string name="error_Socket">خطادر ارتباط با سرور، لطفا تنظیمات شبکه خود را بررسی و مجدد تلاش کنید</string>
     <string name="error_disconnected">برقراری ارتباط حین جابجایی اطلاعات با خطا مواجه شد</string>
     <string name="error_is_not_match">نام کاربری و گذرواژه با یکدیگر مطابقت ندارند</string>
@@ -78,6 +80,7 @@
     <string name="close_app">بستن برنامه</string>
     <string name="call_operator">"لطفا با راهبر سیستم تماس حاصل فرمایید"</string>
     <string name="delete">حذف با موفقیت انجام شد</string>
+    <string name="upload_success">بارگذاری با موفقیت انجام شد</string>
     <string name="send">ارسال</string>
     <string name="receive">دریافت</string>
     <string name="force_close">مجوز ها کامل نیست</string>
@@ -125,4 +128,10 @@
     <string name="previous">قبلی</string>
     <string name="moshakhasat_melk">مشخصات ملک</string>
     <string name="moshakhasat_malek">مشخصات مالک</string>
+    <string name="crop">برش</string>
+    <string name="choose_document">انتخاب مدرک</string>
+    <string name="select_source">تصویر را از کجا انتخاب میکنید؟</string>
+    <string name="gallery">گالری</string>
+    <string name="camera">دوربین</string>
+    <string name="done">انجام شد</string>
 </resources>
