--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,5 @@
 <resources>
     <string name="app_name">ارزیابی</string>
-    <string name="mapbox_access_token">pk.eyJ1IjoiaWFtYWxpcm9zdGFtaSIsImEiOiJjanhjbmptcmowMjZnM3BvdnY0YWx4ampxIn0.iv9I6s34q_-k9GqCiz2seg</string>
-    <string name="user_location_permission_explanation">pk.user_location_permission_explanation</string>
-    <string name="user_location_permission_not_granted">user_location_permission_not_granted</string>
-    <string name="zoom_map_in_and_out_instruction">zoom_map_in_and_out_instruction</string>
-    <string name="zoom_map_in_and_out_variable_label_instruction">zoom_map_in_and_out_variable_label_instruction</string>
-    <string name="tap_on_marker_instruction">tap_on_marker_instruction</string>
-    <string name="move_the_map_and_research">move_the_map_and_research</string>
-    <string name="layer_not_found">layer_not_found</string>
     <string name="downloadDetails">بارگیری</string>
     <string name="upload">بارگذاری</string>
     <string name="paper">مدارک</string>
@@ -89,11 +81,6 @@
     <string name="open_camera">بازکردن دوربین</string>
     <string name="pick_an_image">برگزیدن عکس</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_fragment1">Hello blank fragment1</string>
-    <string name="hello_fragment2">Hello blank fragment2</string>
-    <string name="hello_fragment3">Hello blank fragment3</string>
-    <string name="hello_fragment4">Hello blank fragment4</string>
     <string name="base_information">اطلاعات پایه</string>
     <string name="final_information">اطلاعات نهایی</string>
     <string name="map_information">اطلاعات نقشه</string>
@@ -107,20 +94,20 @@
     <string name="sifoon_125">سیفون 125</string>
     <string name="sifoon_150">سیفون 150</string>
     <string name="ayan_maskooni">اعیان مسکونی</string>
-    <string name="number_maskooni">تعداد مسکونی</string>
+    <string name="number_maskooni">تعداد واحد مسکونی</string>
     <string name="zarfiat_qaradadi">ظرفیت قراردادی</string>
     <string name="adam_taxfif_ab">عدم تخفیف آب</string>
     <string name="phone">تلفن ثابت</string>
     <string name="nation_code">کد ملی</string>
     <string name="name">نام</string>
     <string name="father_name">نام پدر</string>
-    <string name="shomare_eshterak">شماره اشتراک</string>
+    <string name="eshterak">اشتراک</string>
     <string name="sms_phone">شماره پیامک ها</string>
     <string name="shomare_peygiri">شماره پیگیری</string>
     <string name="noe_vagozari">نوع واگذاری</string>
     <string name="arse_kol">عرصه کل</string>
     <string name="bill_id">شناسه قبض</string>
-    <string name="other_number">تعداد سایر</string>
+    <string name="other_number">تعداد واحد سایر</string>
     <string name="postal_code">کد پستی</string>
     <string name="canceled">عملیات متوقف شد.</string>
     <string name="waiting">لطفا صبر کنید…</string>
@@ -143,7 +130,7 @@
     <string name="pelak">شماره پلاک ثبتی</string>
     <string name="aian_kol">اعیان کل</string>
     <string name="aian_non_maskouni">اعیان غیرمسکونی</string>
-    <string name="tedad_tejari">تعداد تجاری</string>
+    <string name="tedad_tejari">تعداد واحد تجاری</string>
     <string name="arzesh_mantaghe">ارزش منطقه</string>
     <string name="qotre_ensheab">قطر انشعاب</string>
     <string name="noe_takhfif">نوع تخفیف</string>
