--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,6 +113,7 @@
     <string name="postal_code">کد پستی</string>
     <string name="canceled">عملیات متوقف شد.</string>
     <string name="waiting">لطفا صبر کنید…</string>
+    <string name="waiting_for_routing">لطفا صبر کنید، در حال مسیریابی…</string>
     <string name="turn_internet_on">اینترنت وصل نیست، اینترنت وایفای یا همراه خود را روشن کنید.</string>
     <string name="access_denialed">مجوز رد شد \n</string>
     <string name="taxfif_number">تعداد تخفیف</string>
@@ -150,4 +151,11 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="document_received">مدارکی که تا کنون دریافت شده است:</string>
     <string name="to_continue">جهت ادامه یکی از عملیات های زیر را انتخاب کنید:</string>
+    <string name="to_exit_reback">برای خروج دوباره بازگشت را بزنید.</string>
+    <string name="is_peymayesh">این مسیر پیمایش شده است.</string>
+    <string name="save_info">ذخیره اطلاعات</string>
+    <string name="yes">بله</string>
+    <string name="no">خیر</string>
+    <string name="accepted_question">درصورت تایید، امکان ویرایش وجود نخواهد داشت. آیا تایید میکنید؟</string>
+    <string name="map_description">برای ایجاد چند ضلعی، چندین بار بر روی نقشه ضربه بزنید.\n\nبرای تعیین محل، انگشت خود را چند لحظه روی محل نگه دارید.</string>
 </resources>
