--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -158,4 +158,6 @@
     <string name="no">خیر</string>
     <string name="accepted_question">درصورت تایید، امکان ویرایش وجود نخواهد داشت. آیا تایید میکنید؟</string>
     <string name="map_description">برای ایجاد چند ضلعی، چندین بار بر روی نقشه ضربه بزنید.\n\nبرای تعیین محل، انگشت خود را چند لحظه روی محل نگه دارید.</string>
+    <string name="brightness">\"درخشش: \"</string>
+    <string name="contrast">\"کنتراست: \"</string>
 </resources>
