--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -160,4 +160,5 @@
     <string name="map_description">برای ایجاد چند ضلعی، چندین بار بر روی نقشه ضربه بزنید.\n\nبرای تعیین محل، انگشت خود را چند لحظه روی محل نگه دارید.</string>
     <string name="brightness">\"درخشش: \"</string>
     <string name="contrast">\"کنتراست: \"</string>
+    <string name="home">خانه</string>
 </resources>
