--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,6 +121,7 @@
     <string name="next">بعدی</string>
     <string name="previous">قبلی</string>
     <string name="moshakhasat_melk">مشخصات ملک</string>
+    <string name="second_form">فرم ثانویه</string>
     <string name="moshakhasat_malek">مشخصات مالک</string>
     <string name="crop">برش</string>
     <string name="choose_document">انتخاب مدرک</string>
@@ -141,6 +142,7 @@
     <string name="ensheab_gheire_daem">انشعاب غیردائم</string>
     <string name="select_service">حداقل یکی از سرویس ها را انتخاب کنید.</string>
     <string name="empty_masir">مسیری برای تخلیه وجود ندارد</string>
+    <string name="empty_download">مسیری برای بارگیری وجود ندارد</string>
     <string name="_031">031</string>
     <string name="shenasname">شماره شناسنامه</string>
     <string name="family">نام خانوادگی</string>
@@ -157,8 +159,37 @@
     <string name="yes">بله</string>
     <string name="no">خیر</string>
     <string name="accepted_question">درصورت تایید، امکان ویرایش وجود نخواهد داشت. آیا تایید میکنید؟</string>
-    <string name="map_description">برای ایجاد چند ضلعی، چندین بار بر روی نقشه ضربه بزنید.\n\nبرای تعیین محل، انگشت خود را چند لحظه روی محل نگه دارید.</string>
+    <string name="map_description">برای ایجاد چند ضلعی، چندین بار بر روی نقشه ضربه بزنید.\n\nبرای تعیین محل، کنتور انگشت خود را چند لحظه روی محل نگه دارید.\n\nبعد از تعیین محل کنتور، برای تعیین محل سیفون، مجددا انگشت خود را چند لحظه روی محل نگه دارید.</string>
     <string name="brightness">\"درخشش: \"</string>
     <string name="contrast">\"کنتراست: \"</string>
     <string name="home">خانه</string>
+    <string name="distance_water_network">فاصله تا شبکه آب</string>
+    <string name="distance_fazelab_network">فاصله تا شبکه فاضلاب</string>
+    <string name="khaki">بخش خاکی</string>
+    <string name="asphalt">بخش آسفالت</string>
+    <string name="sang">سنگ فرش</string>
+    <string name="other">دیگر</string>
+    <string name="qotr_loole">قطر لوله</string>
+    <string name="jens_loole">جنس لوله</string>
+    <string name="loole">لوله</string>
+    <string name="noe_masraf">نوع مصرف</string>
+    <string name="normal">عادی</string>
+    <string name="sakht">ساخت و ساز</string>
+    <string name="shorb_o_behdasht">شرب و بهداشت</string>
+    <string name="vaziat_nasb_pomp">وضعیت نصب پمپ</string>
+    <string name="monaseb">استاندارد</string>
+    <string name="namonaseb">غیراستاندارد</string>
+    <string name="omq_zirzamin">عمق زیرزمین</string>
+    <string name="etesal_shabake_zirzamin">اتصال شبکه به زیر زمین</string>
+    <string name="omq_shabake_fazelab">عمق شبکه فاضلاب</string>
+    <string name="chah_ab_baran">چاه آب باران</string>
+    <string name="have">دارد</string>
+    <string name="have_n">ندارد</string>
+    <string name="noe_shoql">نوع شغل</string>
+    <string name="tedad_vahed">واحد</string>
+    <string name="vahed_mohasebe">واحد م</string>
+    <string name="a_2">مساحت</string>
+    <string name="sign_arziab">محل امضای ارزیاب</string>
+    <string name="sign_motaqazi">محل امضای متقاضی</string>
+    <string name="request_sign">محل امضای ارزیاب و متقاضی باید پر شود.</string>
 </resources>
