--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -194,4 +194,5 @@
     <string name="request_sign">محل امضای ارزیاب و متقاضی باید پر شود.</string>
     <string name="zero">0</string>
     <string name="search">جستجو</string>
+    <string name="clear">پاک کردن</string>
 </resources>
