--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -224,4 +224,5 @@
     <string name="last_address">آخرین آدرس</string>
     <string name="start_date">تاریخ ارزیابی</string>
     <string name="ta">تا</string>
+    <string name="document">سند</string>
 </resources>
