--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -225,4 +225,5 @@
     <string name="start_date">تاریخ ارزیابی</string>
     <string name="ta">تا</string>
     <string name="document">سند</string>
+    <string name="documents">مدارک</string>
 </resources>
