--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">ارزیابی آبفا</string>
-    <string name="downloadDetails">بارگیری</string>
+    <string name="download">بارگیری</string>
     <string name="upload">بارگذاری</string>
     <string name="upload_image">بارگذاری عکس</string>
     <string name="paper">مدارک</string>
@@ -41,10 +41,8 @@
     <string name="error_empty_all">همه فیلد ها خالی است.</string>
     <string name="error_short_length">.این فیلد کوتاه است</string>
     <string name="error_similar">شماره پرونده و شماره اشتراک مطابق نیستند.</string>
-    <string name="error_IO">خطا در جابجای اطلاعات، اتصالات خود را بررسی و مجدد تلاش کنید</string>
     <string name="error_upload">در بارگذاری اطلاعات خطایی پدید آمد.</string>
     <string name="error_Socket">خطادر ارتباط با سرور، لطفا تنظیمات شبکه خود را بررسی و مجدد تلاش کنید</string>
-    <string name="error_disconnected">برقراری ارتباط حین جابجایی اطلاعات با خطا مواجه شد</string>
     <string name="error_is_not_match">نام کاربری و گذرواژه با یکدیگر مطابقت ندارند</string>
     <string name="error_passwords_is_not_match">گذرواژه و تکرار آن با یکدیکر مطابق نیستند</string>
     <string name="error_in_record_voice">در ضبظ صدا مشکلی به وجود آمد</string>
@@ -52,9 +50,10 @@
     <!--    <string name="error_in_format">فرمت وارد نشده نادرست است</string>-->
     <string name="error_not_update1">همکار گرامی لطفا نسخه به روز شده اپلیکیشن را از منوی تنظیمات  بخش به روز رسانی دریافت نمایید</string>
     <string name="error_call_backup">همکار گرامی مشکلی در دریافت اطلاعات این بخش به وجود آمد، با پشتیبان بخش اسناد تماس حاصل فرمایید.</string>
-    <string name="error_not_auth">مجوز های شما باطل شده است، از برنامه خارج و مجددا وارد شوید</string>
+    <string name="error_not_auth">ممجوزهای دسترسی به شما اعطا نشده است، با پشتیبان تماس گرفته و از برنامه خارج و مجددا وارد شوید.</string>
     <string name="error_bill_id">شناسه قبض صحیح نمیباشد.</string>
-    <string name="error_connection">خطا در جابجایی اطلاعات، لطفا مجدد تلاش کنید.</string>
+    <string name="error_disconnected">برقراری ارتباط حین جابجایی اطلاعات با خطا مواجه شد</string>
+    <string name="error_connection">خطا در جابجایی اطلاعات، اتصالات خود را بررسی و مجدد تلاش کنید.</string>
     <string name="error_unknown">خطای ناشناخته رخ داده است.</string>
     <string name="error_code">\nکد خطا:</string>
     <string name="error_other">در حال حاضر خدمات مقدور نمیباشد، لطفا مجددا تلاش فرمایید.</string>
@@ -73,7 +72,7 @@
     <string name="setting_gps">تنظیمات جی پی اس</string>
     <string name="gps_question">مکان یابی شما غیر فعال است ،آیا مایلید به قسمت تنظیمات مکان یابی منتقل شوید</string>
     <string name="close_app">بستن برنامه</string>
-    <string name="call_operator">"لطفا با راهبر سیستم تماس حاصل فرمایید"</string>
+    <string name="call_operator">"لطفا با پشتیبان سیستم تماس حاصل فرمایید"</string>
     <string name="delete">حذف با موفقیت انجام شد</string>
     <string name="upload_success">بارگذاری با موفقیت انجام شد</string>
     <string name="send">ارسال</string>
