--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,7 +118,7 @@
     <string name="turn_internet_on">اینترنت وصل نیست، اینترنت وایفای یا همراه خود را روشن کنید.</string>
     <string name="access_denialed">مجوز رد شد \n</string>
     <string name="taxfif_number">تعداد تخفیف</string>
-    <string name="not_found">رکوردی یافت نشد!</string>
+    <string name="not_found">موردی یافت نشد!</string>
     <string name="next">بعدی</string>
     <string name="previous">قبلی</string>
     <string name="moshakhasat_melk">مشخصات ملک</string>
@@ -232,4 +232,5 @@
     <string name="water_pipe">لوله آب</string>
     <string name="water_transfer">شبکه انتقال آب</string>
     <string name="sanitation_transfer">شبکه انتقال فاضلاب</string>
+    <string name="other_document">مدارک مجاور</string>
 </resources>
