--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,8 @@
     <string name="company_site">AbfaIsfahan.ir</string>
     <string name="copy_right">شبکه تارنما سپاهان</string>
     <string name="version">نسخه</string>
+    <string name="ex_msg_dialog_choice_confirm">Confirm button is only for multi choice lists. You must call setMultiChoiceItems first</string>
+    <string name="ex_msg_dialog_view_not_set">You must call method setView before calling configureView.</string>
 
     <string name="accepted">تایید</string>
     <string name="final_accepted">تایید نهایی</string>
